--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
+logging.level.org.springframework.web=DEBUG
 server.port=8090
 spring.datasource.url = jdbc:mysql://localhost:3306/bootapp?useSSL=false
 
